data/collection/fixes/descriptions/kotlin/KT-19844
```
fun foo(x: String) {}
fun bar(f: () -> Unit) {}
fun test() = bar(::foo)
```

```
0.kt:3:18: error: type mismatch: inferred type is KFunction1<@ParameterName String, Unit> but () -> Unit was expected
fun test() = bar(::foo)
                 ^
```

`@ParameterName` is useless in this message